update readme, index, & gitignore

--- a/index.html
+++ b/index.html
@@ -14,79 +14,77 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="sanjay-kumar-sah-s-web-development-projects-repository">
+      <h1 class="title">
         Sanjay Kumar Sah&#39;s Web Development Projects Repository
       </h1>
-      <p>
+      <p class="text-content">
         Welcome to my web development projects repository! Here, you will find a
         collection of projects that I have worked on during my learning journey,
         internships, and job experiences. These projects focus on HTML, CSS3,
         and JavaScript, reflecting my progress and growth in these essential web
         development technologies.
       </p>
-      <h2 id="about-me">About Me</h2>
-      <p>
-        I&#39;m Sanjay Kumar Sah, a passionate web developer with a background
-        in computer science. I&#39;ve embarked on this project for two primary
-        reasons:
-      </p>
-      <ol>
-        <li>
-          <p>
-            <strong>Learning Perspective</strong>: These projects serve as a
-            record of my continuous learning in web development. They showcase
-            my evolving skills and knowledge over time.
-          </p>
-        </li>
-        <li>
-          <p>
-            <strong>Strengthening Core Knowledge</strong>: By starting each
-            project from scratch and refraining from using copied code, I aim to
-            strengthen my core understanding of HTML, CSS3, SCSS, JavaScript,
-            and relevant libraries. This practice helps me develop a deep
-            comprehension of these technologies.
-          </p>
-        </li>
-      </ol>
-      <h2 id="project-list">Project List</h2>
-      <p>
-        You can explore the projects I&#39;ve worked on in this repository. Each
-        project is categorized and well-documented. Feel free to browse through
-        them, learn from the code, and provide feedback if you have any
-        suggestions.
-      </p>
-      <p>
-        Please note that while the projects are intended to showcase my growth,
-        they may not represent perfect solutions. I&#39;m continually learning
-        and improving, and your insights are valuable to me.
-      </p>
-      <h2 id="contact">Contact</h2>
-      <p>
-        If you have any questions, suggestions, or just want to connect,
-        don&#39;t hesitate to reach out:
-      </p>
-      <ul>
-        <li>
-          Email:
-          <a href="mailto:sanjay8797421521@gmail.com"
-            >sanjay8797421521@gmail.com</a
-          >
-        </li>
-        <li>
-          LinkedIn:
-          <a href="https://www.linkedin.com/in/sanjaysah101"
-            >Sanjay Kumar Sah</a
-          >
-        </li>
-      </ul>
-      <p>
-        Thank you for visiting my repository, and I hope you find my web
-        development journey interesting and informative!
-      </p>
     </div>
-    <section class="project-section">
+    <section class="section section-about">
+      <div class="container">
+        <h2 class="sub-title">About Me</h2>
+        <p class="text-content">
+          I&#39;m Sanjay Kumar Sah, a passionate web developer with a background
+          in computer science. I&#39;ve embarked on this project for two primary
+          reasons:
+        </p>
+        <div class="details__wrapper">
+          <details class="details" open>
+            <summary class="details__summary">Learning Perspective</summary>
+            <p class="details__description">
+              These projects serve as a record of my continuous learning in web
+              development. They showcase my evolving skills and knowledge over
+              time.
+            </p>
+          </details>
+          <details class="details">
+            <summary class="details__summary">
+              Strengthening Core Knowledge
+            </summary>
+            <p class="details__description">
+              By starting each project from scratch and refraining from using
+              copied code, I aim to strengthen my core understanding of HTML,
+              CSS3, SCSS, JavaScript, and relevant libraries. This practice
+              helps me develop a deep comprehension of these technologies.
+            </p>
+          </details>
+        </div>
+      </div>
+    </section>
+    <section id="skills">
+      <div class="container">
+        <h2 class="title">Skills</h2>
+        <p class="text-content">Here are some of the key skills and technologies I've mastered:</p>
+        <ul class="project-lists">
+          <li class="list-item">HTML5</li>
+          <li class="list-item">CSS3 and SCSS</li>
+          <li class="list-item">JavaScript and ES6</li>
+          <li class="list-item">React.js</li>
+          <li class="list-item">Node.js</li>
+          <li class="list-item">Git and Version Control</li>
+          <li class="list-item">Responsive Web Design</li>
+        </ul>
+      </div>
+    </section>
+    <section class="section section-project">
       <div class="container">
         <h2 class="title">My Projects</h2>
+        <p class="text-content">
+          You can explore the projects I&#39;ve worked on in this repository.
+          Each project is categorized and well-documented. Feel free to browse
+          through them, learn from the code, and provide feedback if you have
+          any suggestions.
+        </p>
+        <p class="text-content">
+          Please note that while the projects are intended to showcase my
+          growth, they may not represent perfect solutions. I&#39;m continually
+          learning and improving, and your insights are valuable to me.
+        </p>
         <ol class="project-lists">
           <li class="list-item">
             <a href="Project 1 - Emoji Rating">Emoji Rating</a>
@@ -114,6 +112,27 @@
             <a href="Project 7 - Bankist">Bankist</a>
           </li>
         </ol>
+      </div>
+    </section>
+    <section id="section section-contact">
+      <div class="container">
+        <h2 id="contact" class="sub-title">Contact</h2>
+        <p class="text-content">
+          If you have any questions, suggestions, or just want to connect,
+          don&#39;t hesitate to reach out:
+        </p>
+        <ul class="project-lists">
+          <li class="list-item">
+            LinkedIn:
+            <a href="https://www.linkedin.com/in/sanjaysah101" target="_blank" class="link">
+              Sanjay Kumar Sah
+            </a>
+          </li>
+        </ul>
+        <p class="text-content">
+          Thank you for visiting my repository, and I hope you find my web
+          development journey interesting and informative!
+        </p>
       </div>
     </section>
   </body>
