--- a/Project-9-Forkify/index.html
+++ b/Project-9-Forkify/index.html
@@ -8,10 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <link rel="favicon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
-    <script type="module" defer src="src/js/controller.js"></script>
+    <script type="module" defer src="src/js/controllers/controller.js"></script>
 
     <title>Forkify | Search over 1,000,000 recipes</title>
   </head>
@@ -71,13 +71,7 @@
       </header>
 
       <div class="search-results">
-        <ul class="results">
-          <a href="#5ed6604591c37cdc054bcc13">
-            CAULIFLOWER PIZZA CRUST (WITH BBQ CHICKEN PIZZA)
-          </a>
-          <br />
-          <a href="#5ed6604591c37cdc054bcac4">PIZZA DIP</a>
-        </ul>
+        <ul class="results"></ul>
 
         <div class="pagination"></div>
 
