remove white space & use hex color code for consistency

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     <section id="skills">
       <div class="container">
         <h2 class="title">Skills</h2>
-        <p class="text-content">Here are some of the key skills and technologies I've mastered:</p>
+        <p class="text-content">
+          Here are some of the key skills and technologies I've mastered:
+        </p>
         <ul class="project-lists">
           <li class="list-item">HTML5</li>
           <li class="list-item">CSS3 and SCSS</li>
@@ -104,7 +106,7 @@
           </li>
           <li class="list-item">
             <a href="Project 5 - Modal Window">Modal Window</a>
-          </li>         
+          </li>
           <li class="list-item">
             <a href="Project 6 - Pig Game">Pig Game</a>
           </li>
@@ -127,7 +129,11 @@
         <ul class="project-lists">
           <li class="list-item">
             LinkedIn:
-            <a href="https://www.linkedin.com/in/sanjaysah101" target="_blank" class="link">
+            <a
+              href="https://www.linkedin.com/in/sanjaysah101"
+              target="_blank"
+              class="link"
+            >
               Sanjay Kumar Sah
             </a>
           </li>
