Skills Icon Updated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./images/favicon/favicon-16x16.png"
     />
   </head>
+
   <body>
     <div class="container">
       <h1 class="title">
@@ -62,7 +63,7 @@
         <p class="text-content">
           Here are some of the key skills and technologies I've mastered:
         </p>
-        <ul class="project-lists">
+        <ul class="skills-lists">
           <li class="list-item">HTML5</li>
           <li class="list-item">CSS3 and SCSS</li>
           <li class="list-item">JavaScript and ES6</li>
