--- a/Project-12-Investment-Calculator/index.html
+++ b/Project-12-Investment-Calculator/index.html
@@ -8,6 +8,13 @@
       href="/investment-calculator-logo.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Quicksand:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Investment Calculator</title>
   </head>
   <body>
