--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
           <li class="list-item">
             <a href="Project 8 - Mapty">Mapty App</a>
           </li>
+          <li class="list-item">
+            <a href="https://cheerful-cocada-02e060.netlify.app">Forkify</a>
+          </li>
+          <li class="list-item">
+            <a href="https://jolly-cupcake-a261c1.netlify.app">
+              React Essential
+            </a>
+          </li>
+          <li class="list-item">
+            <a href="https://harmonious-longma-53d2de.netlify.app"
+              >Tic Tac Toe</a
+            >
+          </li>
+          <li class="list-item">
+            <a href="https://lucent-gaufre-095ca4.netlify.app"
+              >Investment Calculator</a
+            >
+          </li>
+          <li class="list-item">
+            <a href="https://astounding-caramel-2ddaa2.netlify.app"
+              >Final Count Down</a
+            >
+          </li>
         </ol>
       </div>
     </section>
