--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@
               >Final Count Down</a
             >
           </li>
+          <li class="list-item">
+            <a href="https://tourmaline-cuchufli-4d218a.netlify.app"
+              >Project Management App</a
+            >
+          </li>
+          <li class="list-item">
+            <a href="https://nimble-swan-80dd7a.netlify.app">Place Picker</a>
+          </li>
+          <li class="list-item">
+            <a href="https://dainty-souffle-5eb493.netlify.app">Quiz App</a>
+          </li>
         </ol>
       </div>
     </section>
