--- a/Project-18-Food-order-app/index.html
+++ b/Project-18-Food-order-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Order App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
